tests/baselines/reference/parserGreaterThanTokenAmbiguity20.errors.txt
==== tests/cases/compiler/parserGreaterThanTokenAmbiguity20.ts (1 errors) ====
    1
    ~
!!! parserGreaterThanTokenAmbiguity20.ts(1,1): error TS2130: Invalid left-hand side of assignment expression.
    // Before
    >>>= // after
    2;